# selenium_playground

./: .dockleignore  .editorconfig  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/workflows/: workflow.yml
selenium_playground/: main.py  notification.py  product.py  scraping_service.py
selenium_playground/config/: schema.json
