[tool.poetry]
name = "selenium-playground"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["miyuush <shiyuroad57@gmail.com>"]
readme = "README.md"
packages = [{include = "selenium_playground"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.4.3"
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
slack-sdk = "^3.18.3"
mypy = "^0.971"
jsonschema = "^4.16.0"

[tool.isort]
profile = "black"
line_length = 99

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
